# CS100FinalProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  credits.cpp  credits.hpp  dummymainmenu.cpp  dummymainmenu.hpp  functionality.cpp  functions.cpp  gameover.cpp  gameover.hpp  inputmanager.hpp  menu.cpp  menu.hpp  settings.cpp  settings.hpp  test.cpp  testfunctionality.cpp
Credits/: credits.hpp
GameManager/: gamemanager.cpp  gamemanager.hpp
GameOver/: gameover.cpp
Leaderboard/: functions.cpp  main.cpp
Leaderboard /: functions.cpp  functions.h
MainMenu/: menu.cpp  menu.hpp
Settings/: settings.cpp  settings.hpp
Test/: testFunctions.cpp
header/: Block.h  BlockMerger.h  BlockMover.h  BlockShifter.h  BlockSpawner.h  Board.h  Coordinate.h  credits.hpp  functions.h  gamemanager.hpp  gameover.hpp  menu.hpp  settings.hpp
src/: BlockMerger.cpp  BlockMover.cpp  BlockShifter.cpp  BlockSpawner.cpp  Board.cpp  CMakeLists.txt  credits.cpp  functionality.cpp  functions.cpp  gamemanager.cpp  gameover.cpp  main.cpp  menu.cpp  settings.cpp
tests/: CMakeLists.txt  blockMergerTests.cpp  blockShifterTests.cpp  blockSpawnerTests.cpp  blockTests.cpp  boardTests.cpp  coordinateTests.cpp  creditsTests.cpp  gameManagerTests.cpp  gameOverTests.cpp  leaderboardTests.cpp  mainMenuTests.cpp  settingsTests.cpp  test.cpp
